# copr-api

./: .gitignore  .gitignore.repo  CITATION.cff  package.json  readme.md  repo.yaml  version-history.md
common/: scheme.json
copr.common/: README.md  package.json  scheme.json
copr.js/: README.md  package.json  scheme.json
copr.js/src/: copr.min.mjs  copr.mjs  copr.node-browser.mjs  copr.node-not-initialized.mjs  copr.node.mjs
copr.js/test/: index.html  test.html  test.mjs
copr.py/: package.json  publish.sh  setup.cfg  setup.py
copr.py/copr/: copr.py
copr.py/tests/: test_aspect.py  test_asset.py  test_representation.py
