# see https://packaging.python.org/en/latest/tutorials/packaging-projects

[metadata]
name = copr
author = Franz-Benjamin Mocnik
author_email = mail@mocnik-science.net
description = A library to access the Corpus of Place Representations (COPR)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mocnik-science/copr-api
classifiers =
  Development Status :: 5 - Production/Stable
  Programming Language :: Python :: 3

